
name:                rt-hs-via-llvm
version:             0.1.0.0
synopsis:            rt hs
-- description:         
homepage:            https://github.com/vdorr/rt-hs-via-llvm
license:             MIT
license-file:        LICENSE
author:              vd
maintainer:          vdorr.package@gmail.com
-- copyright:           
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable rt-hs-via-llvm
  main-is:             Main.hs
  c-sources:           cbits.cpp
  -- other-modules:       
  other-extensions:    CPP, RecursiveDo, OverloadedStrings
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2 && <1.3
                     , llvm-hs-pure >=6.2 && <6.3
                     , bytestring >=0.10 && <0.11
                     , mtl >=2.2 && <2.3
                     , llvm-hs >=6.3 && <6.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -threaded
  ld-options:          -rdynamic -Wl,--whole-archive,--no-whole-archive

